# my-pingcap-talentplan

./: .gitignore  Cargo.toml  README.md
ex-bb2-serde-bson/: Cargo.toml  temp.database.kvs
ex-bb2-serde-bson/src/: main.rs
ex-bb2-serde-json/: Cargo.toml  tmp.txt
ex-bb2-serde-json/src/: main.rs
ex-bb2-serde-ron/: Cargo.toml
ex-bb2-serde-ron/src/: main.rs
ex-bb3-a-redis-pingpong/: Cargo.toml
ex-bb3-a-redis-pingpong/src/: main.rs
ex-bb3-b-redis-pingpong-serde/: Cargo.toml
ex-bb3-b-redis-pingpong-serde/src/: error.rs  main.rs  redis_serde.rs
ex-bb3-b-redis-pingpong-serde/src/redis_serde/: de.rs  error.rs  ser.rs  tests.rs
ex-bb3-b-redis-pingpong-serde/src/redis_serde/de/: tests.rs
ex-bb3-b-redis-pingpong-serde/src/redis_serde/ser/: tests.rs
kvs/: Cargo.toml
kvs-proto-serde/: Cargo.toml  README.md
kvs-proto-serde/src/: de.rs  error.rs  lib.rs  ser.rs  tests.rs
kvs-proto-serde/src/de/: tests.rs
kvs-proto-serde/src/ser/: tests.rs
kvs/src/: error.rs  lib.rs  tests.rs
kvs/tests/: tests.rs
