[package]
name = "kvs"
version = "0.1.0"
authors = ["Gerald E. Butler <gerald.edward.butler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
test = false

 [[bin]]
test = false
name = "kvs"

[dependencies]
clap = "2.33"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = { version="1.0", features=["derive"] }
serde_asn1_der = "0.7"

[dev-dependencies]
assert_cmd = "1.0" # Was 0.11.0 in tutorial
predicates = "1.0"
tempfile = "3.2.0"
walkdir = "2.3.2"